--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <li>Warner Bros : <a href="https://www.warnerbros.com/movies/ready-player-one#gallery">© Tous droits réservés.</a></li>
     <li>Nintendo : <a href="https://commons.wikimedia.org/wiki/File:Zelda_2017.svg">© Tous droits réservés.</a></li>
 	<br>
-    <li>Hébergeur : <a href="https://iut.univ-gustave-eiffel.fr/presentation/services-numeriques">Istitut Universitaire de Technologie de Marne-la-Vallée.</a></li>
+    <li>Hébergeurs : <a href="https://iut.univ-gustave-eiffel.fr/presentation/services-numeriques">Institut Universitaire de Technologie Gustave Eiffel, Marne-la-Vallée.</a> ;
+      <a href="https://www.o2switch.fr/">o2switch</a>
+      </li>
 </ul>
 
 	</div>
